Fixes image captions not allowing them to expand too wide
Given the designated size of the largest image on body of the page,
I set the captions to not exceed the width of the images allowing
content to wrap to the right of them.

mario h.
node/62245

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -3163,6 +3163,7 @@ ul.calendar-links,
   font-size: 12px;
   font-size: 0.75rem;
   font-style: italic;
+  max-width: 370px;
 }
 .field-name-field-file-shared-caption p {
   margin-top: 0;
